--- a/src/components/OrderList/ListItem.module.css
+++ b/src/components/OrderList/ListItem.module.css
@@ -48,3 +48,12 @@ font-weight: bold;
     height:1.5rem;
     margin-left: 1rem;
 }
+
+.btn--add{
+  display: block;
+  margin-top: 1rem;
+  border-radius: 1rem;
+  border-width: 1px;
+  padding:0.5rem 1.5rem;
+  cursor: pointer;
+}
